0016 ReplicatorG
* New features:
** Rearranged control panel to better suit machines with small screens
** Added temperature monitoring graph to control panel

0015 ReplicatorG
* Bug fixes:
* * gh-44: "Save As" now works as expected
* * New files now work as expected
* * gh-35: No longer resetting machine at startup
* * gh-33: Removed separate concept of current position from
*   gcode parser
* New features:
* * gh-42: arc resolution is now controllable via preferences
* * gh-40: valve/fan outputs renamable in machines.xml.
* * gh-39: frostruder support.
* * gh-37: messages are now color-coded and timestamped
* * gh-32: preference for default sketch at start time
* * Support for tuning the PID parameters on the extruder
*   controller
* * Automatically checks servers for new versions
* * Better shutdown and interrupt behavior

0014 ReplicatorG
* Many small stability fixes
* Faster startup
* Working serial timeouts on Windows and Mac OS X
* Support for new onboard preferences for Motherboard and Extruder Controller
* Fixes for a number of Linux and Mac display issues
* Fix for firmware upload source pref
* The text field in the control panel are now also handled when hitting "Enter"/"Return" (not only when focus is lost).

0013 ReplicatorG
* Added ability to phone home for new firmware
* Improved uploading; no longer need to hit reset on EC or MBs with jumpers
* New cut of drivers, toolchains
* Now checks firmware version upstream and warns of old versions

0012 ReplicatorG
* Added support for v1.8 extruder firmware; dynamically generates
  thermistor table and uploads to extruder firmware

0011 ReplicatorG

* Support for heated build platform
* On startup, ReplicatorG now not only prints the Motherboard's firmware version on the console, but also the Extruder controller's firmware version
* Estimating no longer sends tweets
* Upgraded twitter4j library to 2.0.10 

0010 ReplicatorG

* Status panel responses improved
* Added images for set home/go home buttons