@@ -2,7 +2,7 @@ Format is tab separated preferences.
 Activate Speed:	True
 Bridge Feedrate Multiplier (ratio):	1.0
 Extrusion Diameter over Thickness (ratio):	1.3
-Feedrate (mm/s):	26.0
+Feedrate (mm/s):	30.0
 Open File to be Speeded	
 Do Not Add Flowrate	False
 Metric	False
