@@ -97,7 +97,7 @@ public class Base {
 	/**
 	 * The version number of this edition of replicatorG.
 	 */
-	public static final int VERSION = 16;
+	public static final int VERSION = 17;
 	/**
 	 * The textual representation of this version (4 digits, zero padded).
 	 */
